--- a/day17/assignment12.html
+++ b/day17/assignment12.html
@@ -6,9 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <h3>Add or Remove Paragraphs</h3>
-    <button id="add">Add Paragraph</button>
-    <button id="remove">Remove Last Paragraph</button>
+    <h3>Add or Remove Paragraphs.</h3>
+    <button id="add">Add Paragraph.</button>
+    <button id="remove">Remove Last Paragraph.</button>
     <div id="container"></div>
     <script>
       const addButton = document.getElementById("add");
